<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".database.storage.StorageActivity">

    <EditText
        android:id="@+id/edtOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/msg"/>

    <Button
        android:id="@+id/btnPublic"
        android:hint="@string/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_data_public"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtOne"
        app:layout_constraintEnd_toStartOf="@+id/btnPrivate"/>

    <Button
        android:id="@+id/btnPrivate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_data_private"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPublic"
        app:layout_constraintTop_toBottomOf="@+id/edtOne" />

    <Button
        android:id="@+id/btnViewOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_data"
        android:hint="@string/msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPrivate" />


    <EditText
        android:id="@+id/edtTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        android:inputType="text"
        android:hint="@string/msg"/>

    <Button
        android:id="@+id/btnPublicTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_data_public"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTwo"
        app:layout_constraintEnd_toStartOf="@+id/btnPrivateTwo"/>

    <Button
        android:id="@+id/btnPrivateTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_data_private"
        android:hint="@string/msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPublicTwo"
        app:layout_constraintTop_toBottomOf="@+id/edtTwo" />

    <Button
        android:id="@+id/btnViewTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_data"
        android:hint="@string/msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPrivateTwo" />

</androidx.constraintlayout.widget.ConstraintLayout>