<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".animation.AnimationOneActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/home" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageview"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <!--To start the blink animation of the image-->
            <Button
                android:id="@+id/BTNblink"
                style="@style/TextAppearance.AppCompat.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/blink"
                android:textColor="@color/white" />

            <!--To start the rotate animation of the image-->
            <Button
                android:id="@+id/BTNrotate"
                style="@style/TextAppearance.AppCompat.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/clockwise"
                android:textColor="@color/white" />

            <!--To start the fading animation of the image-->
            <Button
                android:id="@+id/BTNfade"
                style="@style/TextAppearance.AppCompat.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/fade"
                android:textColor="@color/white" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear1"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <!--To start the move animation of the image-->
            <Button
                android:id="@+id/BTNmove"
                style="@style/TextAppearance.AppCompat.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/move"
                android:textColor="@color/white" />

            <!--To start the slide animation of the image-->
            <Button
                android:id="@+id/BTNslide"
                style="@style/TextAppearance.AppCompat.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/slide"
                android:textColor="@color/white" />

            <!--To start the zoom animation of the image-->
            <Button
                android:id="@+id/BTNzoom"
                style="@style/TextAppearance.AppCompat.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/zoom"
                android:textColor="@color/white" />

        </LinearLayout>

        <!--To stop the animation of the image-->
        <Button
            android:id="@+id/BTNstop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear2"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/stop_animation" />

        <!--To stop the animation of the image-->
        <Button
            android:id="@+id/BTNbounce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/BTNstop"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:text="Bounce Animation" />

    </RelativeLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/animation_view"
        app:lottie_rawRes="@raw/pastry_checf"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="gone"/>

<!--    Start from here-->
<!--    Change some property in java file-->
    <com.sarnava.textwriter.TextWriter
        android:id="@+id/textWriter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

<!--    Change enableDashPath from true to false-->
    <com.captaindroid.lineanimation.Animator
        android:id="@+id/lineAnimator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:pathColor="@color/color62"
        app:pathStrokeWidth="2dp"
        app:enableDashPath="true"
        app:dashPathGap="4sp"
        app:dashPathSize="4sp"
        app:drawable="@drawable/home"
        app:repeatable="false"
        app:drawableAminationSpeed="10"
        android:visibility="gone"/>

<!--    Its written in Kotlin refer this
        https://www.geeksforgeeks.org/bubbleemitter-animation-in-android-with-examples/-->
    <org.firezenk.bubbleemitter.BubbleEmitterView
        android:id="@+id/bubbleEmitter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

<!--    Instagram Heart-->
    <xyz.hanks.library.bang.SmallBangView
        android:layout_margin="20dp"
        android:id="@+id/imageViewAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/heart_selector"
            />

    </xyz.hanks.library.bang.SmallBangView>

    <xyz.hanks.library.bang.SmallBangView
        android:id="@+id/textViewAnimation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:textColor="@color/color42"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="GeeksForGeeks"
            android:textSize="25sp"
            android:textStyle="bold" />
    </xyz.hanks.library.bang.SmallBangView>

    <me.wangyuwei.particleview.ParticleView
        android:id="@+id/particleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:pv_host_text="GeeksForGeeks"
        app:pv_host_text_size="32sp"
        app:pv_particle_text=".com"
        app:pv_particle_text_size="18sp"
        app:pv_text_color="@color/colorPrimary"
        app:pv_background_color="#FFF"
        app:pv_text_anim_time="2000"
        app:pv_spread_anim_time="300"
        app:pv_host_text_anim_time="1000"
        android:visibility="gone"/>

    <!-- Button with Bounce Animation -->
<!--    Try to add fillAfter="false" in  R.anim.bounce file then check what is happening-->
    <Button
        android:id="@+id/button"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:text="Let's Bounce"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Interpolators"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Linear"
                android:textColor="#FFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/accelerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Accelerate"
                android:textColor="#FFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/decelerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Decelerate"
                android:textColor="#FFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Bounce"
                android:textColor="#FFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/overshoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Overshoot"
                android:textColor="#FFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/anticipate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Anticipate"
                android:textColor="#FFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Cycle"
                android:textColor="#FFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/accelerateDecelerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Accelerate Decelerate"
                android:textColor="#FFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/anticipateOvershoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Anticipate Overshoot"
                android:textColor="#FFF" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <Button
            android:id="@+id/btnShine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Click me"/>
        
        <View
            android:id="@+id/viewShine"
            android:layout_width="30dp"
            android:layout_height="50sp"
            android:rotation="20"
            android:background="@drawable/home"/>

    </LinearLayout>

    <com.scwang.wave.MultiWaveHeader
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:visibility="gone"/>

</RelativeLayout>